<resources>
    <string name="app_name">iTecH School</string>
    <string name="course_name">কোর্সের নাম: </string>
    <string name="course_title">Course Name</string>
    <string name="text_accounts">একাউন্ট সমূহ</string>
    <string name="text_uses_smart_phone_about">স্মার্টফোনের ব্যবহার সম্পর্কিত</string>
    <string name="text_uses_computer_about">কম্পিউটারের ব্যবহার সম্পর্কিত</string>
    <string name="text_basic_mind_qna">বেসিক মনের প্রশ্নোত্তর</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="thumbnail_image_view_desc">Youtube Video thumbnail image view</string>
    <string name="important_links">গুরুত্বপূর্ণ লিংক সমূহ</string>
    <string name="facebook_links">ফেসবুক লিংক সমূহ</string>
    <string name="subscribe">সাবস্ক্রাইব</string>
    <string name="about_us">আমাদের সম্পর্কে</string>
    <string name="help">হেল্প</string>
    <string name="help_text">-ঃহেল্পঃ-</string>
    <string name="about_us_text">-ঃআমাদের সম্পর্কেঃ-</string>
    <string name="gk">সাধারণ জ্ঞান</string>
    <string name="google_account">গুগল একাউন্ট</string>
    <string name="facebook_account">ফেইসবুক একাউন্ট</string>
    <string name="smartphones_about">স্মার্টফোন সম্পর্কিত</string>
    <string name="mind_qna">মনের প্রশ্নোত্তর</string>
    <string name="urgent_notes">জরুরী নোটসঃ</string>
    <string name="urgent_files">জরুরী ফাইলসঃ</string>
    <string name="about_us_details">আইটেক স্কুল হচ্ছে বাংলার সবচেয়ে বড় প্রযুক্তি বিষয়ক অনলাইন স্কুল যেখানে যেকোনো স্তরের মানুষ বিনামূল্যেই (প্রায়) প্রযুক্তি বিষয়ে দক্ষতা, সাইবার নিরাপত্তা, ফ্রীল্যান্সিং, প্রফেশনাল কাজ শেখার মানসম্মত ক্লাস করতে পারবে!</string>
    <string name="help_string">আইটেক স্কুল ব্যাক্তিগত ভাবে কাউকে সাহায্য করতে পারে না। এর অন্যতম কারণ মোট ছাত্র-ছাত্রীর সংখ্যা। অপরদিকে, আইটেক স্কুল হচ্ছে বিনামূল্যে প্রযুক্তি বিষয়ে শেখার প্লাটফর্ম। তাই ব্যাক্তিগত ভাবে কাউকে হেল্প করার জন্য আইটেক স্কুল অঙ্গীকারাবদ্ধ নয়। তবুও আপনাদের কথা বিবেচনা করে আইটেক স্কুলের ফেইসবুক গ্রুপ উন্মুক্ত রয়েছে। সেখানে জয়েন হয়ে পোস্ট এবং কমেন্ট করার মাধ্যমে একে অপরকে হেল্প করতে পারবেন।</string>
    <string-array name="video_id_array">
        <item>CqhpNxI8qYw</item>
        <item>sasCrpgHDy8</item>
        <item>iJeh3x09Ya8</item>
        <item>B5zRaD7B504</item>
        <item>9qWHzj8k-Uo</item>
        <item>RjiK45wC924</item>
        <item>RH3zaLO8H4E</item>
        <item>o14pyzosjvk</item>
        <item>5SQrpBQne7A</item>
        <item>5WJ3r67ORxo</item>
    </string-array>
</resources>
