<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".fragment.VideosFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginBottom="20dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/course_name"
                android:textAlignment="textEnd"
                android:textColor="@color/Black"
                android:layout_weight="1"
                android:textSize="18sp"
                />
            <TextView
                android:id="@+id/course_title_tv_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/course_title"
                android:textAlignment="textStart"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginLeft="2sp"
                android:textColor="@color/Red"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <androidx.cardview.widget.CardView
            android:id="@+id/cat1_cv_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/text_accounts"
                android:textColor="@color/White"
                android:gravity="center"
                android:textSize="20sp"
                android:background="@color/colorPrimary"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/chapter_recyler_view_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:padding="2dp" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cat2_cv_id"
            android:layout_width="match_parent"
            android:layout_below="@+id/cat1_cv_id"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/text_uses_smart_phone_about"
                android:textColor="@color/White"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:textSize="20sp"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/phone_recyler_view_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:layout_marginTop="30dp"
                />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cat3_cv_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cat2_cv_id"
            android:layout_gravity="center"
            android:layout_marginTop="2dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/text_uses_computer_about"
                android:gravity="center"
                android:textColor="@color/White"
                android:background="@color/colorPrimary"
                android:textSize="20sp"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/computer_recyler_view_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:layout_marginTop="30dp"/>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cat4_cv_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_below="@+id/cat3_cv_id"
            android:layout_marginTop="2dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center"
                android:text="@string/text_basic_mind_qna"
                android:textColor="@color/White"
                android:background="@color/colorPrimary"
                android:textSize="20sp"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/qna_recyler_view_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:layout_marginTop="30dp"/>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
    </LinearLayout>
</ScrollView>