<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CyberSecurityActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <com.jaedongchicken.ytplayer.YoutubePlayerView
            android:id="@+id/youtubePlayerView"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@color/white_nav"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_marginTop="4dp"
                >
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/course_back_iv_id"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="5dp"
                    app:civ_border_width="2dp"
                    app:civ_border_color="@color/DarkGray"
                    android:background="@color/DarkGray"
                    android:src="@drawable/ic_back"
                    android:scaleType="centerCrop"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/course_name"
                    android:layout_marginLeft="5dp"
                    android:textColor="@color/Black"
                    android:layout_weight="2"
                    android:textSize="18sp"
                    />
                <TextView
                    android:id="@+id/course_title_tv_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/course_title"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_marginLeft="2sp"
                    android:textColor="@color/Red"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!--<com.google.android.material.tabs.TabLayout
            android:id="@+id/mains_tab_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:tabTextColor="@color/White"/>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/main_tabs_view_pager_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:weightSum="3"
            android:background="@color/White"
            >
            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Videos"
                android:layout_weight="1"
                android:src="@mipmap/ic_video_foreground"
                android:background="@color/colorPrimary"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Notes"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:textColor="@color/White"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Files"
                android:background="@color/colorPrimary"
                android:textColor="@color/White"
                android:layout_marginRight="2dp"
                android:layout_weight="1"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <androidx.cardview.widget.CardView
                android:id="@+id/gk_cv_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/gk"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginLeft="15dp"
                    android:textSize="20sp"
                    android:background="@color/color_chapterBG"
                    />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/gk_recyler_view_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:padding="2dp" />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/google_account_cv_id"
                android:layout_width="match_parent"
                android:layout_below="@+id/gk_cv_id"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/google_account"
                    android:textColor="@color/colorPrimary"
                    android:background="@color/color_chapterBG"
                    android:layout_marginLeft="15dp"
                    android:textSize="20sp"
                    />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/google_account_recyler_view_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:layout_marginTop="30dp"
                    />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/facebook_account_cv_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/google_account_cv_id"
                android:layout_gravity="center"
                android:layout_marginTop="2dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/facebook_account"
                    android:layout_marginLeft="15dp"
                    android:textColor="@color/colorPrimary"
                    android:background="@color/color_chapterBG"
                    android:textSize="20sp"
                    />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/facebook_account_recyler_view_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:layout_marginTop="30dp"/>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/smartphones_about_cv_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_below="@+id/facebook_account_cv_id"
                android:layout_marginTop="2dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginLeft="15dp"
                    android:text="@string/smartphones_about"
                    android:textColor="@color/colorPrimary"
                    android:background="@color/color_chapterBG"
                    android:textSize="20sp"
                    />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/smartphones_about_recyler_view_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:layout_marginTop="30dp"/>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/mind_qna_cv_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_below="@+id/smartphones_about_cv_id"
                android:layout_marginTop="2dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginLeft="15dp"
                    android:text="@string/mind_qna"
                    android:textColor="@color/colorPrimary"
                    android:background="@color/color_chapterBG"
                    android:textSize="20sp"
                    />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/mind_qna_recyler_view_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:layout_marginTop="30dp"/>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>

    </LinearLayout>

</ScrollView>